update all-map: fix responsive margin

--- a/src/app/pages/all-map/all-map.component.html
+++ b/src/app/pages/all-map/all-map.component.html
@@ -7,7 +7,7 @@
         </ol>
     </nav>
 </div>
-<div class="row row-xs mg-b-10">
+<div class="row row-xxs mg-b-10">
     <div class="col-md-4">
         <div class="card">
             <div class="card-header tx-danger d-md-flex justify-content-between">
@@ -15,7 +15,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 mg-md-t-0 mg-t-5">
         <div class="card">
             <div class="card-header tx-warning d-md-flex justify-content-between">
                 <h6 class="mg-b-0 tx-spacing--1">Warning</h6><span>6</span>
@@ -30,7 +30,7 @@
             </ul>
         </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 mg-md-t-0 mg-t-5">
         <div class="card">
             <div class="card-header d-md-flex justify-content-between">
                 <h6 class="mg-b-0 tx-spacing--1">Normal</h6><span>0</span>
