--- a/src/app/pages/all-map-v2/all-map-v2.component.html
+++ b/src/app/pages/all-map-v2/all-map-v2.component.html
@@ -26,11 +26,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let danger of dangers" (mouseenter)="focusTo($event, danger)">
+                        <tr *ngFor="let danger of dangers" (mouseenter)="focusTo(danger, $event)">
                             <td>{{ danger.site }}</td>
                             <td>{{ danger.suggestAction }}</td>
                             <td class="tx-right">
-                                <button class="btn btn-primary">Detail</button>
+                                <button class="btn btn-primary"
+                                    (click)="openModalDetail(danger, $event)">Detail</button>
                             </td>
                         </tr>
                     </tbody>
@@ -53,11 +54,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let warning of warnings" (mouseenter)="focusTo($event, warning)">
+                        <tr *ngFor="let warning of warnings" (mouseenter)="focusTo(warning, $event)">
                             <td>{{ warning.site }}</td>
                             <td>{{ warning.suggestAction }}</td>
                             <td class="tx-right">
-                                <button class="btn btn-primary">Detail</button>
+                                <button class="btn btn-primary"
+                                    (click)="openModalDetail(warning, $event)">Detail</button>
                             </td>
                         </tr>
                     </tbody>
@@ -79,10 +81,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let normal of normals" (mouseenter)="focusTo($event, normal)">
+                        <tr *ngFor="let normal of normals" (mouseenter)="focusTo(normal, $event)">
                             <td>{{ normal.site }}</td>
                             <td class="tx-right">
-                                <button class="btn btn-primary">Detail</button>
+                                <button class="btn btn-primary"
+                                    (click)="openModalDetail(normal, $event)">Detail</button>
                             </td>
                         </tr>
                     </tbody>
