--- a/src/app/pages/all-map-v2/all-map-v2.component.html
+++ b/src/app/pages/all-map-v2/all-map-v2.component.html
@@ -1,9 +1,9 @@
 <div class="d-md-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
-    <h4 class="mg-b-0 tx-spacing--1">All Map V2</h4>
+    <h4 class="mg-b-0 tx-spacing--1">All Map</h4>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb breadcrumb-style1 mg-b-10">
             <li class="breadcrumb-item">Home</li>
-            <li class="breadcrumb-item active" aria-current="page">All Map V2</li>
+            <li class="breadcrumb-item active" aria-current="page">All Map</li>
         </ol>
     </nav>
 </div>
