--- a/src/app/pages/all-map-v2/all-map-v2.component.html
+++ b/src/app/pages/all-map-v2/all-map-v2.component.html
@@ -26,7 +26,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let danger of dangers" (mouseenter)="focusTo(danger, $event)">
+                        <tr *ngFor="let danger of dangers" (mouseenter)="focusTo(danger, $event)"
+                            (click)="focusTo(danger, $event)">
                             <td>{{ danger.site }}</td>
                             <td>{{ danger.suggestAction }}</td>
                             <td class="tx-right">
@@ -54,7 +55,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let warning of warnings" (mouseenter)="focusTo(warning, $event)">
+                        <tr *ngFor="let warning of warnings" (mouseenter)="focusTo(warning, $event)"
+                            (click)="focusTo(warning, $event)">
                             <td>{{ warning.site }}</td>
                             <td>{{ warning.suggestAction }}</td>
                             <td class="tx-right">
@@ -81,7 +83,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let normal of normals" (mouseenter)="focusTo(normal, $event)">
+                        <tr *ngFor="let normal of normals" (mouseenter)="focusTo(normal, $event)"
+                            (click)="focusTo(normal, $event)">
                             <td>{{ normal.site }}</td>
                             <td class="tx-right">
                                 <button class="btn btn-primary"
