init all-map-ct, site-management-ct

--- a/src/app/pages/all-map-ct/all-map-v2/modal-detail-v2/modal-detail-v2.component.html
+++ b/src/app/pages/all-map-ct/all-map-v2/modal-detail-v2/modal-detail-v2.component.html
@@ -29,6 +29,6 @@
     </table>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" routerLink="/user/detail-device"
+    <button type="button" class="btn btn-outline-dark" routerLink="/user/all-map/detail-device"
         (click)="activeModal.dismiss('Cross click')">More Detail</button>
 </div>
