--- a/src/app/pages/site-management-ct/site-management/site-management.component.html
+++ b/src/app/pages/site-management-ct/site-management/site-management.component.html
@@ -10,7 +10,7 @@
 <div class="card">
     <div class="card-header d-md-flex justify-content-between">
         <h6 class="mg-b-0">List of Site</h6>
-        <button class="btn btn-sm btn-primary">Add Site</button>
+        <button class="btn btn-sm btn-primary" routerLink="site-form">Add Site</button>
     </div>
     <div class="table-responsive">
         <table class="table">
