--- a/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.html
+++ b/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.html
@@ -10,10 +10,10 @@
 <div class="row row-xs">
     <div id="accordion" class="col-md-4">
         <div class="card mg-b-10">
-            <div id="danger" class="card-header tx-danger d-md-flex justify-content-between" data-toggle="collapse"
-                data-target="#dangerList" aria-expanded="true" aria-controls="dangerList" style="cursor: pointer;"
-                (click)="updateLayer(dangers, markerIcon.danger)">
-                <h6 class=" mg-b-0 tx-spacing--1">Danger</h6><span>{{ dangers.length }}</span>
+            <div id="danger" class="card-header tx-center bg-pink" data-toggle="collapse" data-target="#dangerList"
+                aria-expanded="true" aria-controls="dangerList" (click)="updateLayer(dangers, markerIcon.danger)">
+                <h4 class="tx-normal tx-rubik tx-40 tx-spacing--1 mg-b-0">{{ dangers.length }}</h4>
+                <span class="tx-12 tx-uppercase tx-semibold tx-spacing-1 tx-color-02">Danger</span>
             </div>
             <div id="dangerList" class="collapse show table-responsive" aria-labelledby="danger"
                 data-parent="#accordion">
@@ -40,10 +40,10 @@
             </div>
         </div>
         <div class="card mg-b-10">
-            <div id="warning" class="card-header tx-warning d-md-flex justify-content-between" data-toggle="collapse"
-                data-target="#warningList" aria-expanded="true" aria-controls="warningList" style="cursor: pointer;"
-                (click)="updateLayer(warnings, markerIcon.warning)">
-                <h6 class="mg-b-0 tx-spacing--1">Warning</h6><span>{{ warnings.length }}</span>
+            <div id="warning" class="card-header tx-center bg-warning" data-toggle="collapse" data-target="#warningList"
+                aria-expanded="true" aria-controls="warningList" (click)="updateLayer(warnings, markerIcon.warning)">
+                <h4 class="tx-normal tx-rubik tx-40 tx-spacing--1 mg-b-0">{{ warnings.length }}</h4>
+                <span class="tx-12 tx-uppercase tx-semibold tx-spacing-1 tx-color-02">Warning</span>
             </div>
             <div id="warningList" class="collapse table-responsive" aria-labelledby="warning" data-parent="#accordion">
                 <table class="table table-hover mg-b-0">
@@ -69,10 +69,10 @@
             </div>
         </div>
         <div class="card mg-b-10">
-            <div id="normal" class="card-header d-md-flex justify-content-between" data-toggle="collapse"
-                data-target="#normalList" aria-expanded="true" aria-controls="normalList" style="cursor: pointer;"
-                (click)="updateLayer(normals, markerIcon.normal)">
-                <h6 class="mg-b-0 tx-spacing--1">Normal</h6><span>{{ normals.length }}</span>
+            <div id="normal" class="card-header tx-center bg-brand-03" data-toggle="collapse" data-target="#normalList"
+                aria-expanded="true" aria-controls="normalList" (click)="updateLayer(normals, markerIcon.normal)">
+                <h4 class="tx-normal tx-rubik tx-40 tx-spacing--1 mg-b-0">{{ normals.length }}</h4>
+                <span class="tx-12 tx-uppercase tx-semibold tx-spacing-1 tx-color-02">Normal</span>
             </div>
             <div id="normalList" class="collapse table-responsive" aria-labelledby="normal" data-parent="#accordion">
                 <table class="table table-hover mg-b-0">
