--- a/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.scss
+++ b/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.scss
@@ -1,11 +1,10 @@
-.tx-danger {
-    h6 {
-        color: #dc3545;
-    }
-}
+.bg-pink,
+.bg-warning,
+.bg-brand-03 {
+    cursor: pointer;
 
-.tx-warning {
-    h6 {
-        color: #ffc107;
+    span,
+    h4 {
+        color: white;
     }
 }
