--- a/src/app/pages/user-management-ct/user-form/user-form.component.html
+++ b/src/app/pages/user-management-ct/user-form/user-form.component.html
@@ -8,3 +8,70 @@
         </ol>
     </nav>
 </div>
+<div class="card">
+    <h6 class="card-header">User Form</h6>
+    <div class="card-body">
+        <div class="form-group form-row">
+            <label for="" class="col-md-2 col-form-label">Username</label>
+            <div class="col-md-10">
+                <input type="text" class="form-control" placeholder="Enter username">
+            </div>
+        </div>
+        <div class="form-group form-row">
+            <label for="" class="col-md-2 col-form-label">Email</label>
+            <div class="col-md-10">
+                <input type="text" class="form-control" placeholder="Enter email">
+            </div>
+        </div>
+        <div class="form-group form-row">
+            <label for="" class="col-md-2 col-form-label">Password</label>
+            <div class="col-md-10">
+                <div class="form-row">
+                    <div class="col">
+                        <input type="password" class="form-control" placeholder="Enter password">
+                    </div>
+                    <div class="col">
+                        <input type="password" class="form-control" placeholder="Re enter password">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-group form-row">
+            <label for="" class="col-md-2 col-form-label">Role</label>
+            <div class="col-md-10">
+                <select name="" id="" class="form-control">
+                    <option value="">Please select role</option>
+                    <option value="">Role 1</option>
+                    <option value="">Role 2</option>
+                    <option value="">Role 3</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group form-row">
+            <label for="" class="col-md-2 col-form-label">Region</label>
+            <div class="col-md-10">
+                <select name="" id="" class="form-control">
+                    <option value="">Please select region</option>
+                    <option value="">Role 1</option>
+                    <option value="">Role 2</option>
+                    <option value="">Role 3</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group form-row">
+            <label for="" class="col-md-2 col-form-label">Site</label>
+            <div class="col-md-10">
+                <select name="" id="" class="form-control">
+                    <option value="">Please select site</option>
+                    <option value="">Role 1</option>
+                    <option value="">Role 2</option>
+                    <option value="">Role 3</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="card-footer tx-right">
+        <button class="btn btn-primary mg-r-5">Submit</button>
+        <button class="btn btn-danger" routerLink="../">Cancel</button>
+    </div>
+</div>
