--- a/src/app/pages/alert-and-ticketing-ct/list-alert/list-alert.component.html
+++ b/src/app/pages/alert-and-ticketing-ct/list-alert/list-alert.component.html
@@ -17,9 +17,18 @@
                     <th>Site</th>
                     <th>Policy Name</th>
                     <th>State</th>
-                    <th title="Service Level Agreement">SLA</th>
+                    <th class="wd-100" title="Service Level Agreement">SLA</th>
                 </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="tx-right"><button class="btn btn-sm btn-primary" routerLink="alert-detail">Detail</button></td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </div>
