--- a/src/app/core/wrapper/wrapper.component.html
+++ b/src/app/core/wrapper/wrapper.component.html
@@ -46,7 +46,7 @@
                     <p class="mg-b-10 tx-12 tx-color-03">{{ user.role }}</p>
                 </div>
                 <div class="dropdown-divider"></div>
-                <a href="" class="dropdown-item" routerLink="/login">
+                <a class="dropdown-item" style="cursor: pointer;" (click)="logout()">
                     <i data-feather="log-out"></i>Logout
                 </a>
             </div>
