remove all-map: change to dashboard

--- a/src/app/pages/all-map-ct/detail-device/detail-device.component.html
+++ b/src/app/pages/all-map-ct/detail-device/detail-device.component.html
@@ -4,7 +4,7 @@
         <ol class="breadcrumb breadcrumb-style1 mg-b-10">
             <li class="breadcrumb-item">Home</li>
             <li class="breadcrumb-item" aria-current="page">
-                <a href="" routerLink="../">All Map</a>
+                <a href="" routerLink="../">Dashboard</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">Detail Device</li>
         </ol>
