--- a/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.html
+++ b/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.html
@@ -14,7 +14,7 @@
                         <thead>
                             <tr>
                                 <th>Site</th>
-                                <th>Suggest Action</th>
+                                <th>Title</th>
                                 <th></th>
                             </tr>
                         </thead>
@@ -45,7 +45,7 @@
                         <thead>
                             <tr>
                                 <th>Site</th>
-                                <th>Suggest Action</th>
+                                <th>Title</th>
                                 <th></th>
                             </tr>
                         </thead>
