update all-map-v2: fix issue minor

--- a/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.html
+++ b/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.html
@@ -195,15 +195,15 @@
                     <table class="table table-invoice mg-b-0">
                         <tr>
                             <th>High Temperature Battery</th>
-                            <td class="tx-primary tx-right">1 hour ago</td>
+                            <td class="tx-primary tx-right">10 cases</td>
                         </tr>
                         <tr>
                             <th>Empty Fuel Tank</th>
-                            <td class="tx-primary tx-right">2 hour ago</td>
+                            <td class="tx-primary tx-right">3 cases</td>
                         </tr>
                         <tr>
                             <th>High Kwh Usage</th>
-                            <td class="tx-primary tx-right">3 days ago</td>
+                            <td class="tx-primary tx-right">3 cases</td>
                         </tr>
                     </table>
                 </div>
@@ -217,15 +217,15 @@
                     <table class="table table-invoice mg-b-0">
                         <tr>
                             <th>BTSH Bandung 1</th>
-                            <td class="tx-primary tx-right">1 hour ago</td>
+                            <td class="tx-primary tx-right">3 alerts/day</td>
                         </tr>
                         <tr>
                             <th>BTSP Sukabumi 2</th>
-                            <td class="tx-primary tx-right">2 hour ago</td>
+                            <td class="tx-primary tx-right">2 alerts/day</td>
                         </tr>
                         <tr>
                             <th>IPLH Cianjur 7</th>
-                            <td class="tx-primary tx-right">3 days ago</td>
+                            <td class="tx-primary tx-right">3 alerts/day</td>
                         </tr>
                     </table>
                 </div>
