--- a/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.html
+++ b/src/app/pages/all-map-ct/all-map-v2/all-map-v2.component.html
@@ -130,7 +130,7 @@
 <div class="card mg-t-10">
     <h6 class="card-header">Alert and Ticketing</h6>
     <div class="card-body row row-xs">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card">
                 <h6 class="mg-b-0 card-header tx-gray-500">Ticket</h6>
                 <div class="card-body pd-lg-10">
@@ -141,7 +141,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card mg-t-10 mg-md-t-0">
                 <h6 class="card-header tx-gray-500 bd-b-0">SLA and Escalation</h6>
                 <div class="table-responsive">
@@ -167,8 +167,8 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card mg-t-10 mg-md-t-0">
-                <h6 class="card-header tx-gray-500 bd-b-0">Latest Alert</h6>
+            <div class="card mg-t-10">
+                <h6 class="card-header tx-gray-500 bd-b-0">Latest</h6>
                 <div class="table-responsive">
                     <table class="table table-invoice mg-b-0">
                         <tr>
@@ -189,8 +189,10 @@
                     <button class="btn btn-sm btn-primary">Show More</button>
                 </div>
             </div>
+        </div>
+        <div class="col-md-4">
             <div class="card mg-t-10">
-                <h6 class="card-header tx-gray-500 bd-b-0">Top Alert</h6>
+                <h6 class="card-header tx-gray-500 bd-b-0">Most Frequently Issues</h6>
                 <div class="table-responsive">
                     <table class="table table-invoice mg-b-0">
                         <tr>
@@ -211,8 +213,10 @@
                     <button class="btn btn-sm btn-primary">Show More</button>
                 </div>
             </div>
+        </div>
+        <div class="col-md-4">
             <div class="card mg-t-10">
-                <h6 class="card-header tx-gray-500 bd-b-0">Top Sites with Alert</h6>
+                <h6 class="card-header tx-gray-500 bd-b-0">Most Attention Sites</h6>
                 <div class="table-responsive">
                     <table class="table table-invoice mg-b-0">
                         <tr>
