--- a/src/app/pages/site-management-ct/site-management/site-management.component.html
+++ b/src/app/pages/site-management-ct/site-management/site-management.component.html
@@ -15,11 +15,25 @@
     <div class="table-responsive">
         <table class="table">
             <thead>
-                <th>Site Name</th>
-                <th>Region</th>
-                <th>Latitude</th>
-                <th>Longitude</th>
+                <tr>
+                    <th>Site Name</th>
+                    <th>Region</th>
+                    <th>Latitude</th>
+                    <th>Longitude</th>
+                    <th></th>
+                </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="tx-right">
+                        <button class="btn btn-primary" routerLink="config-device">Config Device</button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </div>
