--- a/src/app/pages/site-management-ct/site-management/site-management.component.html
+++ b/src/app/pages/site-management-ct/site-management/site-management.component.html
@@ -30,8 +30,8 @@
                     <td>{{ site.type }}</td>
                     <td>{{ site.status }}</td>
                     <td class="tx-right">
-                        <button class="btn btn-primary" routerLink="config-device">Config Device</button>
-                        
+                        <button class="btn btn-primary mg-r-5" routerLink="config-device">Config Device</button>
+                        <button class="btn btn-primary" routerLink="site-profile">Profile</button>
                     </td>
                 </tr>
             </tbody>
