--- a/src/app/pages/site-management-ct/site-management/site-management.component.html
+++ b/src/app/pages/site-management-ct/site-management/site-management.component.html
@@ -30,7 +30,9 @@
                     <td>{{ site.type }}</td>
                     <td>{{ site.status }}</td>
                     <td class="tx-right">
-                        <button class="btn btn-primary mg-r-5" routerLink="config-device">Config Device</button>
+                        <button class="btn btn-primary mg-r-5" [routerLink]="['config-device', site.id]">
+                            Config Device
+                        </button>
                         <button class="btn btn-primary" [routerLink]="['site-profile', site.id]">Profile</button>
                     </td>
                 </tr>
