--- a/src/app/pages/site-management-ct/site-profile/site-profile.component.html
+++ b/src/app/pages/site-management-ct/site-profile/site-profile.component.html
@@ -1,5 +1,5 @@
 <div class="d-md-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
-    <h4 class="mg-b-0 tx-spacing--1">Site Management</h4>
+    <h4 class="mg-b-0 tx-spacing--1">Site Profile</h4>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb breadcrumb-style1 mg-b-10">
             <li class="breadcrumb-item">Home</li>
@@ -9,7 +9,7 @@
     </nav>
 </div>
 <div class="card">
-    <h6 class="card-header">Site Profile</h6>
+    <h6 class="card-header">Detail</h6>
     <div class="card-body">
         <div class="form-group row">
             <label for="" class="col-md-2 col-form-label">Site Name</label>
