update dashboard: update title card

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -132,7 +132,7 @@
         </div>
         <div class="col-md-4">
             <div class="card mg-t-10">
-                <h6 class="card-header tx-gray-500 bd-b-0">Latest</h6>
+                <h6 class="card-header tx-gray-500 bd-b-0">Reason Incident</h6>
                 <div class="table-responsive">
                     <table class="table table-invoice mg-b-0">
                         <tr>
@@ -156,7 +156,7 @@
         </div>
         <div class="col-md-4">
             <div class="card mg-t-10">
-                <h6 class="card-header tx-gray-500 bd-b-0">Most Frequently Issues</h6>
+                <h6 class="card-header tx-gray-500 bd-b-0">Most Frequent Issues</h6>
                 <div class="table-responsive">
                     <table class="table table-invoice mg-b-0">
                         <tr>
@@ -180,7 +180,7 @@
         </div>
         <div class="col-md-4">
             <div class="card mg-t-10">
-                <h6 class="card-header tx-gray-500 bd-b-0">Most Attention Sites</h6>
+                <h6 class="card-header tx-gray-500 bd-b-0">Most Problematic Site</h6>
                 <div class="table-responsive">
                     <table class="table table-invoice mg-b-0">
                         <tr>
