update modal-set-sensor: add service

--- a/src/app/pages/site-management-ct/config-device/config-device.component.html
+++ b/src/app/pages/site-management-ct/config-device/config-device.component.html
@@ -32,7 +32,8 @@
                                 <td></td>
                                 <td></td>
                                 <td class="tx-right">
-                                    <button class="btn btn-primary" (click)="openModalSetSensor()">Set Sensor</button>
+                                    <button class="btn btn-primary"
+                                        (click)="openModalSetSensor(property.id, $event)">Set Sensor</button>
                                 </td>
                             </tr>
                         </tbody>
